ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~

2008-07-20 Benedikt Heintel
	- GUI:
		* Fixed #1432

2008-07-19 Benedikt Heintel
	- GUI:
		* Fixed #1397: E-Mail on ticket response
		* Fixed #1402: awstats static not working
		* Fixed #1425: Include support for templates
		* Fixed #1431
	- TOOLS:
		* Updated phpMyAdmin to 2.11.7.1

2008-07-19 Jochen Manz
	- GUI:
		* Small fix for ispcp-lib.php

2008-07-18 Benedikt Heintel
	- GUI:
		* Fixed #1416: Missing menu when a client try to ad new email: client/mail_add.php
		* Fixed #1417: Template error and missing menu when a client try to enable autoresponder: client/mail_autoresponder_enable.php
		* Fixed #1418: Template error and missing menu when a client try to enable autoresponder: client/mail_autoresponder_edit.php
		* Fixed #1419: Template error and missing menu when a client try to create catch all: client/mail_catchall_add.php
		* Fixed #1420: Missing menu when a client try to edit email: client/mail_edit.php
		* Fixed #1421: Client can't change sql password: client/sql_change_password.php (template error)
		* Fixed #1423: e-mail as normal mail and e-mail forward not in /etc/courier/userdb
		* Fixed #1424: Adminstrator password created by setup is truncated at 8 characters
		* Fixed #1428: ispell is needed for webmail
	- LANGUAGES:
		* Added Chinese (Hongkong)
		* Added Galician
		* Updated Chinese (China)
		* Updated Italian

2008-07-16 Benedikt Heintel
	- GUI:
		* Fixed #1358: Webmail link in tools should be hidden if domain has no mail
		* Fixed #1400: error in manage_users.php (left menu)
		* Fixed #1412: Some pages are not working with latest trunk
		* Fixed #1413: Editing e-mail account: new password is shell-escaped
		* Fixed #1414: SMTP AUTH not working with password, that contains a dollar sign
	- SETUP:
		* Fixed #1395: vhcs2.4.7-ispcp.sql / ispc-update - default language not migrated

2008-07-12 Marc Pujol
	- ENGINE:
		* Fixed #1405: mysqldump fails with remote database
	- GUI: