@@ -218,4 +218,17 @@ function _databaseUpdate_5() {
 
 	return $sqlUpd;
 }
+
+/*
+ * Fix for ticket #755 http://www.isp-control.net/ispcp/ticket/755 (Markus Milkereit, 2008-07-20)
+ */
+function _databaseUpdate_6() {
+	$sqlUpd = array();
+
+	$sqlUpd[] = "ALTER IGNORE TABLE `htaccess`
+				CHANGE `user_id` `user_id` VARCHAR(255) NULL DEFAULT NULL ,
+				CHANGE `group_id` `group_id` VARCHAR(255) NULL DEFAULT NULL";
+
+	return $sqlUpd;
+}
 ?>
